<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name= "com.devhome.eduardobastos.bastosconsultoria.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/principal_fragment"/>

    <fragment

        android:id="@+id/nav_servicos"
        android:name="com.devhome.eduardobastos.bastosconsultoria.servicos.ServicosFragment"
        android:label="@string/menu_servicos"
        tools:layout="@layout/servicos_fragment" />

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.devhome.eduardobastos.bastosconsultoria.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/clientes_fragment" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.devhome.eduardobastos.bastosconsultoria.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/contato_fragment" />

    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.devhome.eduardobastos.bastosconsultoria.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/sobre_fragment" />

</navigation>